<resources>
    <string name="app_name">minimill_util</string>
    <string name="app_label">Mini Mill Utility</string>
    <string name="tableOffsetString">Table Offset</string>
    <string name="fullTurnsString">Full Turns</string>
    <string name="dialReadingString">Dial Reading</string>
    <string name="inchLabel">IN</string>
    <string name="mmLabel">MM</string>
    <string name="counterClockwiseLabel">CCW</string>
    <string name="clockwiseLabel">CW</string>
    <string name="titleString">Mini Mill Utility</string>
    <string name="offsetValueHint">Dist=</string>
</resources>
